[metadata]
name = ronkyuu
version = 0.9rc1
author = Mike Taylor and Kartik Prabhu
author_email = bear@bear.im
description = "Webmention Manager"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bear/ronkyuu
license = CC0 1.0 Universal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[check-manifest]
ignore =
  violations.flake8.txt

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
filename = *.py src/ tests/
exclude = .cache,.tox,.git,.eggs,.venv,__pycache__,build,dist
ignore = E203, E221, E241, E266, E501, W503
max-complexity = 18
select = B,C,E,F,W,T4

[tool:pytest]
testpaths=tests
